dockerized backend and composed with mongo still some errors to go

--- a/back/package.json
+++ b/back/package.json
@@ -4,14 +4,15 @@
   "description": "hapi js backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "boom": "^7.3.0",
     "hapi": "^18.1.0",
-    "hapi-mongodb": "^8.0.0"
+    "mongoose": "^5.4.15"
   },
   "devDependencies": {}
 }
