--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 services:
   backend:
     container_name: backend
@@ -6,6 +6,7 @@ services:
     build: ./back/
     ports:
       - "3000:3000"
+    depends_on: [mongo]
     volumes:
       - ./back:/usr/src/backend
     links:
@@ -14,6 +15,11 @@ services:
     container_name: mongo
     image: mongo
     restart: always
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongo mongo:27017/test --quiet 1
+      interval: 10s
+      timeout: 10s
+      retries: 5
     volumes:
       - ./data:/data/db
     ports:
