--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -6,4 +6,6 @@ COPY package-lock.json /usr/src/backend
 RUN npm install
 COPY . /usr/src/backend
 EXPOSE 3000
-CMD ["npm", "start"]
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.2.1/wait /wait
+RUN chmod +x /wait
+CMD /wait && npm start
