--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: "3"
 services:
+  frontend:
+    container_name: frontend
+    restart: always
+    build: ./front/
+    ports:
+      - "80:80"
+    environment:
+      WAIT_HOSTS: mongo:27017 0.0.0.0:3000
+    depends_on: [mongo, backend]
+    links: [mongo, backend]
   backend:
     container_name: backend
     restart: always
